--- a/app/views/user_templates/index.html.erb
+++ b/app/views/user_templates/index.html.erb
@@ -1,5 +1,15 @@
 <h1> List of users</h1>
 
+<form action= "/insert_user" method="post">
+  <label for="username_field"> Username</label>
+  <input id= "username_field" type ="text" name= "the_username" placeholder = "Enter a username ...">
+  <button>
+  Add user
+  </button>
+</form>
+
+
+<hr>
 <table border ="1">
   <tr>
     <th>
@@ -21,7 +31,7 @@
         <%=a_user.username%>
       </td>
         <td>
-        <Show details
+        <a href = "/users/<%=a_user.username%>">Show details</a>
       </td>
     </tr>
 
