--- a/app/views/photo_templates/index.html.erb
+++ b/app/views/photo_templates/index.html.erb
@@ -1,5 +1,18 @@
 <h1> List of photos </h1>
 
+<form action="/insert_photo" method = "post">
+<label for ="image_field">Image</label>
+<input id= "image_field" type= "text" placeholder="Enter a URL for the image ..." name = "the_image">
+
+<label for ="caption_field">Caption</label>
+<textarea id= "caption_field" placeholder="Enter a caption for the photo..." name = "the_caption"></textarea>
+
+<label for ="owner_field">Owner ID</label>
+<input id= "owner_field" type= "text" placeholder="Enter an ID of a User" name = "the_owner">
+
+<button>Add photo</button>
+</form>
+
 <table border="1">
   <tr>
     <th>
