--- a/app/views/photo_templates/show.html.erb
+++ b/app/views/photo_templates/show.html.erb
@@ -39,10 +39,10 @@
   <dd>
     <form action="/update_photo/<%=@the_photo.id%>" method="post">
       <label for="browser_image">Image</label>
-      <input id="browser_image" type="text" name="input_image" placeholder="Enter a URL for the image..." value=https://robohash.org/dolorehicincidunt.png?size=300x300&amp;set=set1>
+      <input id="browser_image" type="text" name="the_new_image" placeholder="Enter a URL for the image..." value= "<%=@the_photo.image%>">
 
       <label for="browser_caption">Caption</label>
-      <textarea id="browser_caption" name="input_caption" placeholder="Enter a caption for the photo...">Once you’ve accepted your flaws, no one can use them against you.</textarea>
+      <textarea id="browser_caption" name="the_new_caption" placeholder="Enter a caption for the photo..."><%=@the_photo.caption%></textarea>
 
       <button>Update photo</button>
     </form>
@@ -84,5 +84,13 @@
   </tr>
 
 <%end%>
+</table>
 
 <h3>Add a new comment</h3>
+
+<form >
+  <label for="photo_id"> Photo ID </label>
+  <input id = "photo_id" type ="text" name = "the_photo_id" value = "<%=@the_photo.id%>">
+
+  
+</form>
